--- a/notebooks/ex_files_python_data_mistakes/Exercise Files/01_01_comments.ipynb
+++ b/notebooks/ex_files_python_data_mistakes/Exercise Files/01_01_comments.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,34 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "__ __ __ __ __ __ __ __ __ __ \n",
+      "\n",
+      "Pick a letter: a\n",
+      "Match!\n",
+      "a __ __ __ __ __ __ __ __ __ \n",
+      "Pick a letter: acc\n",
+      "Not a match!\n",
+      "a __ __ __ __ __ __ __ __ __ \n",
+      "Pick a letter: auto\n",
+      "Match!\n",
+      "a __ __ __ __ __ __ __ __ __ \n",
+      "Pick a letter: automobile\n",
+      "Match!\n",
+      "a __ __ __ __ __ __ __ __ __ \n",
+      "Pick a letter: cream\n",
+      "Not a match!\n",
+      "a __ __ __ __ __ __ __ __ __ \n",
+      "Pick a letter: automobile\n",
+      "Match!\n",
+      "a __ __ __ __ __ __ __ __ __ \n"
+     ]
+    }
+   ],
    "source": [
     "# Create an instance of Hangman\n",
     "HM_game1 = Hangman()\n",
@@ -119,7 +146,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -133,7 +160,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
