check notebook on comments

--- a/notebooks/ex_files_python_data_mistakes/Exercise Files/01_01_comments.ipynb
+++ b/notebooks/ex_files_python_data_mistakes/Exercise Files/01_01_comments.ipynb
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -110,22 +110,50 @@
       "\n",
       "Pick a letter: a\n",
       "Match!\n",
-      "a __ __ __ __ __ __ __ __ __ \n",
-      "Pick a letter: acc\n",
+      "__ __ a __ __ __ __ __ __ __ \n",
+      "Pick a letter: e\n",
+      "Match!\n",
+      "__ __ a __ __ e __ __ e __ \n",
+      "Pick a letter: b\n",
       "Not a match!\n",
-      "a __ __ __ __ __ __ __ __ __ \n",
-      "Pick a letter: auto\n",
+      "__ __ a __ __ e __ __ e __ \n",
+      "Pick a letter: i\n",
       "Match!\n",
-      "a __ __ __ __ __ __ __ __ __ \n",
-      "Pick a letter: automobile\n",
-      "Match!\n",
-      "a __ __ __ __ __ __ __ __ __ \n",
-      "Pick a letter: cream\n",
+      "__ __ a __ __ e __ i e __ \n",
+      "Pick a letter: o\n",
       "Not a match!\n",
-      "a __ __ __ __ __ __ __ __ __ \n",
-      "Pick a letter: automobile\n",
+      "__ __ a __ __ e __ i e __ \n",
+      "Pick a letter: u\n",
+      "Not a match!\n",
+      "__ __ a __ __ e __ i e __ \n",
+      "Pick a letter: t\n",
+      "Not a match!\n",
+      "__ __ a __ __ e __ i e __ \n",
+      "Pick a letter: c\n",
       "Match!\n",
-      "a __ __ __ __ __ __ __ __ __ \n"
+      "c __ a __ __ e __ i e __ \n",
+      "Pick a letter: h\n",
+      "Match!\n",
+      "c h a __ __ e __ i e __ \n",
+      "Pick a letter: x\n",
+      "Not a match!\n",
+      "c h a __ __ e __ i e __ \n",
+      "Pick a letter: x\n",
+      "Not a match!\n",
+      "c h a __ __ e __ i e __ \n",
+      "Pick a letter: x\n",
+      "Not a match!\n",
+      "c h a __ __ e __ i e __ \n",
+      "Pick a letter: x\n",
+      "Not a match!\n",
+      "c h a __ __ e __ i e __ \n",
+      "Pick a letter: x\n",
+      "Not a match!\n",
+      "c h a __ __ e __ i e __ \n",
+      "Pick a letter: x\n",
+      "Not a match!\n",
+      "c h a __ __ e __ i e __ \n",
+      "You lost!\n"
      ]
     }
    ],
